--- a/IMDB Reviews Sentiment Analysis Model-85%accuracy.ipynb
+++ b/IMDB Reviews Sentiment Analysis Model-85%accuracy.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## IMDB Reviews Sentiment Analysis"
+    "## IMDB Reviews Sentiment Analysis using Glove Model and LSTM Neural Networks"
    ]
   },
   {
